--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
         "@types/node": "^10.12.12",
         "mocha": "^5.2.0",
         "ts-node": "^7.0.1",
-        "typescript": "^3.2.2"
+        "typescript": "^3.2.2",
+        "reflect-metadata": "^0.1.13"
     },
     "files": [
         "dist"
     ],
     "dependencies": {
-        "@chengaoyuan/int64": "^1.0.1"
+        "int53": "^1.0.0"
     }
 }
