--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.js",
     "scripts": {
         "test": "mocha -r ts-register --colors test/*.ts",
-        "build": "node del.js && tsc -d"
+        "build": "rimraf dist && tsc -d"
     },
     "repository": {
         "type": "git",
@@ -26,6 +26,7 @@
         "@types/mocha": "^5.2.5",
         "@types/node": "^10.12.12",
         "mocha": "^5.2.0",
+        "rimraf": "^2.6.3",
         "ts-node": "^7.0.1",
         "typescript": "^3.2.2",
         "reflect-metadata": "^0.1.13"
